   * New, greatly simplified display of games in the MP Lobby.
   * Fixed individual Join/Observe buttons acting on the wrong game in the MP
     Lobby.
   * Greatly improved behavior of sliders.
   * Fixed crash when modifying an existing friend entry in Preferences.
   * Fixed players being unable to start campaigns in MP mode.
 * WFL Engine:
   * A new string insert() function has been added, similar to replace()
 * WML Engine:
   * Added a major_amla option in AMLAs to keep the XP bar teal-white rather
     than purple for AMLAs that behave similar to regular advancements.
     (for example, Quenoth Youth in UtBS or similar unit lines)
   * File paths with backslashes are no longer allowed. This ensures that a UMC
     author can't accidentally use them and make an add-on that breaks on
     GNU/Linux and macOS.
   * File paths are now case sensitive even on Windows.
   * [show_if] is now usable in the [objectives] subtag [gold_carryover].
   * Macro SCEPTRE_OF_FIRE_EFFECT damage increased to 15x4 so Sceptre is an
     improvement over the uncut ruby of fire (14x4) in TRoW.
   * Added [lua] as a conditional tag, with identical syntax.
     The code in such a tag must return a true or false value.
   * Lua errors now cause as a condition to fail instead of pass.
   * New formula= key in [set_variable] allows evaluating a WFL formula with
     the variable, which may be either a scalar or a container.
   * A missing [event] name= key will now raise a WML error instead of being
     silently ignored.
 * Miscellaneous and bug fixes:
   * Fixed crash after canceling add-on download (bug #2203)
   * Fixed ingame help showing units you haven't encountered (bug #2135)
   * Fixed the opacity IPF resetting to 0 if the value given was 100% or
     greater (bug #2185).
   * Fix recalls updating shroud immediately when "Delay Shroud Updates" is set
     (bug #2196)
   * Fixed not being able to undo previous moves after entering planning mode
     (bug #2303)
