@@ -61,6 +61,7 @@ Version 1.13.11:
    * Greatly improved behavior of sliders.
    * Fixed crash when modifying an existing friend entry in Preferences.
    * Fixed players being unable to start campaigns in MP mode.
+   * Added confirmation prompt when clearing map labels.
  * WFL Engine:
    * A new string insert() function has been added, similar to replace()
  * WML Engine:
